# dbt-lsp

./: .gitignore  Cargo.toml  nvim_setup.lua  test_sqlparser.rs  todo.md
src/: diagnostics.rs  jinja.rs  main.rs  parser.rs  project.rs  state.rs
