[package]
name = "dbt-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dashmap = "5"
ropey = "1"
tree-sitter = "0.22"
tree-sitter-sql-bigquery = "0.8.0"
walkdir = "2" # For scanning directories
anyhow = "1"
log = "0.4"
env_logger = "0.10"
regex = "1.12.2"
